--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,11 @@
-<footer>
-The Footer
+<footer class="col-sm-12">
+  <div class="col-sm-3 col-sm-offset-2 flag-tag">
+    <a href="{{site.footer.link}}"><img class="center" alt="{{site.footer.alt}}" src="{{site.footer.image}}" width="150"></a>
+  </div>
+
+  <div class="col-sm-6"> 
+      <p>This interactive graphic is by the <a href="http://codeforamerica.org/governments/denver/">2014 Code for America Fellows in Denver</a>. The data represented is taken from open data provided by the <a href="http://www.denvergov.org/">City and County of Denver</a>.</p>
+      <p>You can find more open data at <a href="http://data.denvergov.org">http://data.denvergov.org</a>.</p>
+  </div>
+
 </footer>
