--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,19 @@
 <header>
-The Header
+  <nav class="navbar navbar-default navbar-static visible-xs visible-sm" role="navigation">
+    <div class="navbar-header">
+      <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#topbar">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">{{ site.name }}</a>
+    </div>
+
+    <div class="collapse navbar-collapse" id="topbar">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Test</a></li>
+      </ul>
+    </div>
+  </nav>
 </header>
