--- a/_includes/javascript.html
+++ b/_includes/javascript.html
@@ -1,1 +1,2 @@
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 <script type="text/javascript" src="{{ "/js/bootstrap.js" | prepend: site.baseurl }}"></script>
