--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
       <div class="container" role="main">
         <div class="row">
           {% include header.html %}
+          {% include sidebar.html %}
 
           {{ content }}
 
