Add dynamic link
Add dynamic posts. Move more content to config. Remove fake post.

--- a/_includes/javascript.html
+++ b/_includes/javascript.html
@@ -1,2 +1,4 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 <script type="text/javascript" src="{{ "/js/bootstrap.js" | prepend: site.baseurl }}"></script>
+<script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+<script type="text/javascript">stLight.options({publisher: "46e4833a-a8e0-486e-9849-76d8fee2f6fe", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
