--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,12 +7,12 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">{{ site.name }}</a>
+      <a class="navbar-brand" href="#">{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</a>
     </div>
 
     <div class="collapse navbar-collapse" id="topbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Test</a></li>
+        {% include nav-links.html %}
       </ul>
     </div>
   </nav>
