--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,21 +1,12 @@
-<div id="sidebar" class="navbar col-sm-3 visible-md visible-lg" role="complementary">
-  <div class="bs-sidebar hidden-print affix">
-    <h3 class="site-name">{{ site.name }}</h3>
-    
-    <ul class="nav bs-sidenav">
-      <li><a href="#">Test</a></li>
-    </ul>
-    
-     
-    <div class="share_this">
-      Share this: <br>
+<div class="bs-sidebar hidden-print affix">
+  <h3 class="site-name">{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</h3>
 
-      <a class="fb" href="javascript:window.open('http://www.facebook.com/share.php?u=https://www.google.com/&title=Marijuana Indicators In Denver' , '_blank', 'width=400,height=500');void(0);"></a>
+  <ul class="nav bs-sidenav">
+    {% include nav-links.html %}
+  </ul>
 
-      <a class="twitter" href="javascript:window.open('http://twitter.com/home?status=Marijuana Indicators In Denver+https://www.google.com/' , '_blank', 'width=400,height=500');void(0);"></a>
-
-      <a class="gplus"  href="javascript:window.open('https://plus.google.com/share?url=https://www.google.com/' , '_blank', 'width=490,height=550');void(0);"></a>
-    </div>
+  <div class="share_this">
+    {{site.share}}<br>
+    {% include social.html %}
   </div>
 </div>
-<div id="fb-root"></div>
