Add big number section
Use includes to format the code

--- a/css/main.scss
+++ b/css/main.scss
@@ -306,16 +306,119 @@ footer a:hover {
   transition:.2s;
 }
 
+/*Center Content Vertically*/
+.col-sm-4.centered,
+.col-sm-4.centered+.col-sm-8 {
+  float:none;
+  display:inline-block;
+  vertical-align:middle;
+
+}
+.col-sm-4.centered {
+  margin-right:-.4em;
+  padding-left: 40px;
+  padding-right: 40px;
+}
+.col-md-8.centered,
+.col-md-8.centered+.col-md-4 {
+  float:none;
+  display:inline-block;
+  vertical-align:middle;
+
+}
+.col-md-8.centered {
+  margin-right:-.4em;
+  padding-left: 40px;
+  padding-right: 40px;
+}
+.col-md-6.centered, .col-md-6.centered+.col-md-6 {
+  float:none;
+  display:inline-block;
+  vertical-align:middle;
+  padding-left: 40px;
+  padding-right: 40px;
+}
+.col-md-6.centered {
+  margin-right:-.8em;
+}
+
+
+
+/* This parent can be any width and height */
+.block {
+}
+
+/* The ghost, nudged to maintain perfect centering */
+.block:before {
+  content: '';
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+  margin-right: -0.3em; /* Adjusts for spacing */
+}
+
+/* The element to be centered, can also be of any width and height */
+.centered {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.section-block {
+  padding-bottom: 50px;
+  margin-bottom: 50px;
+/*  border-bottom: 1px solid rgba(255, 255, 255, .6);*/
+}
+
+/* Useful Classes */
+.full-width-image {width: 100%;}
+.half-width-image {width: 50%;}
+
+/* Format image+description container*/
+.insight-container {
+  margin: 30px 0 30px 0;
+}
+
+/* Format description under images*/
+.image-description {
+  margin: 20px auto 0 auto;
+  width: 80%;
+}
+
+/* Format description under charts*/
+.chart-description {
+  margin: 0 auto 0 auto;
+  width: 80%;
+}
+
+
+.big-number {
+  font-family: "HelveticaNeue-Bold", "Helvetica Neue Bold", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-size: 5em;
+  text-align: center;
+}
+
+.big-number-description {
+  font-size: 1.3em;
+}
+
 /* Show and affix the side nav when space allows it */
 @media(max-width:767px){
   .big-number {
     font-size: 5em;
+  }
+
+  .big-number-description {
+    font-size: 1.3em;
   }
 }
 
 @media(min-width:768px){
   .big-number {
     font-size: 6em;
+  }
+
+  .big-number-description {
+    font-size: 1.5em;
   }
 }
 
@@ -324,6 +427,9 @@ footer a:hover {
     font-size: 5em;
   }
 
+  .big-number-description {
+    font-size: 1.3em;
+  }
   .bs-sidebar .nav > .active > ul {
     display: block;
   }
@@ -362,5 +468,9 @@ footer a:hover {
   
   .big-number {
     font-size: 6em;
+  }
+
+  .big-number-description {
+    font-size: 1.5em;
   }
 }
