--- a/_includes/javascript.html
+++ b/_includes/javascript.html
@@ -2,3 +2,5 @@
 <script type="text/javascript" src="{{ "/js/bootstrap.js" | prepend: site.baseurl }}"></script>
 <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
 <script type="text/javascript">stLight.options({publisher: "46e4833a-a8e0-486e-9849-76d8fee2f6fe", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
+<script type="text/javascript" src="{{ "/js/d3.js" | prepend: site.baseurl }}"></script>
+<script type="text/javascript" src="{{ "/js/dimple.v2.0.0.min.js" | prepend: site.baseurl }}"></script>
