--- a/_includes/nav-links.html
+++ b/_includes/nav-links.html
@@ -1,4 +1,4 @@
 <li><a href="#about">About</a></li>
 {% for post in site.posts %}
-  <li><a href="#{{post.href}}">{{post.title}}</a></li>
+  <li><a href="#{{post.section}}">{{post.title}}</a></li>
 {% endfor %}
