--- a/_includes/big.html
+++ b/_includes/big.html
@@ -1,5 +1,5 @@
 <div class="row block">
-  <div class="col-sm-4 big-number" id="{{big.section}}-number">$203M</div>
+  <div class="col-sm-4 big-number" id="{{big.section}}-number"></div>
   <div class="col-md-8 centered" id="{{big.section}}-number-strong">
     <div id="{{big.section}}-number-description" class="big-number-description"><strong>... {{big.description}}</strong></div>
     <div id="{{big.section}}-number-more" class="big-number-description">{{big.more}}</div>
