--- a/_includes/javascript.html
+++ b/_includes/javascript.html
@@ -5,4 +5,5 @@
 <script type="text/javascript" src="{{ "/js/d3.js" | prepend: site.baseurl }}"></script>
 <script type="text/javascript" src="{{ "/js/dimple.v2.0.0.min.js" | prepend: site.baseurl }}"></script>
 <script type="text/javascript" src="{{ "/js/main.js" | prepend: site.baseurl }}"></script>
+<script type="text/javascript" src="{{ "/js/scrollshadow.js" | prepend: site.baseurl }}"></script>
 <script type="text/javascript" src="{{ "/js/first.js" | prepend: site.baseurl }}"></script>
