--- a/_includes/nav-links.html
+++ b/_includes/nav-links.html
@@ -1,4 +1,4 @@
-<li><a href="#about">About</a></li>
+<a href="#about">About</a>
 {% for post in site.posts %}
-  <li><a href="#{{post.section}}">{{post.title}}</a></li>
+  <a href="#{{post.section}}">{{post.title}}</a>
 {% endfor %}
