--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,20 +2,11 @@
 <html>
   {% include head.html %}
 
-     <body data-spy="scroll" data-target=".navbar">
-      <div class="container" role="main">
+     <body>
+      {% include header.html %}
 
-        <div class="row">
-          {% include header.html %}
-
-          <div id="sidebar" class="navbar col-sm-3 visible-md visible-lg" role="complementary">
-          {% include sidebar.html %}
-          </div>
-
-          <div class="col-md-9">
-          {{ content }}
-          </div>
-        </div>
+      <div class="col-md-9">
+      {{ content }}
       </div>
 
       {% include footer.html %}
