--- a/_includes/big.html
+++ b/_includes/big.html
@@ -1,7 +1,6 @@
-<div class="row block">
-  <div class="col-sm-4 big-number" id="{{big.section}}-number"></div>
-  <div class="col-md-8 centered" id="{{big.section}}-number-strong">
-    <div id="{{big.section}}-number-description" class="big-number-description"><strong>... {{big.description}}</strong></div>
-    <div id="{{big.section}}-number-more" class="big-number-description">{{big.more}}</div>
-  </div>
+<div class="bigtext">
+  <span id="{{big.section}}-number"></span>
 </div>
+
+<div id="{{big.section}}-number-strong" class="info-description">... {{big.description}}</div>
+<div id="{{big.section}}-number-more" class="info-description">{{big.more}}</div>
