--- a/_includes/graph.html
+++ b/_includes/graph.html
@@ -1,13 +1,5 @@
-<div class="row">
-  <div class="col-md-12 text-center">
-      <div id="{{graph.type}}" class="full-width-image"></div>
-  </div>
-</div>
+<div id="{{graph.type}}"></div>
 
 {% if graph.description %}
-<div class="row">
-  <div class="col-md-10 col-md-offset-1 text-center">
-    <p>{{graph.description}}</p>
-  </div>
-</div>
+<div class="info-description">{{graph.description}}</div>
 {% endif %}
