--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,5 +1,9 @@
-<a class="fb" href="javascript:window.open('http://www.facebook.com/share.php?u={{site.url}}&title={{site.title}}' , '_blank', 'width=400,height=500');void(0);"></a>
+<div>
+<div class="lead share-text">Share this:</div>
 
-<a class="twitter" href="javascript:window.open('http://twitter.com/home?status={{site.title}}+{{site.url}}' , '_blank', 'width=400,height=500');void(0);"></a>
+	<a class="fb btn-share" href="javascript:window.open('http://www.facebook.com/share.php?u=' + document.URL + '&title={{site.title}}' , '_blank', 'width=400,height=500');void(0);"></a>
 
-<a class="gplus"  href="javascript:window.open('https://plus.google.com/share?url={{site.url}}' , '_blank', 'width=490,height=550');void(0);"></a>
+	<a class="twitter btn-share" href="javascript:window.open('http://twitter.com/home?status={{site.title}}+' + document.URL, '_blank', 'width=400,height=500');void(0);"></a>
+
+	<a class="gplus btn-share"  href="javascript:window.open('https://plus.google.com/share?url=' + document.URL , '_blank', 'width=490,height=550');void(0);"></a>
+</div>
